--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 ktor:
     application:
         modules:
-            - com.schlepping.ApplicationKt.module
+            - com.schlepping.arcana.ApplicationKt.module
     deployment:
         port: 8080
 
